[package]
name = "enums_arena"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["itmyxyf@gmail.com"]
description = "`enums_arena` is an arena that enums can be stored efficiently"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enums_arena_derive = "0.1"
enums_arena_defines = "0.1"
# enums_arena_derive = {path="../enums_arena_derive"}
# enums_arena_defines = {path="../enums_arena_defines"}
