[package]
name = "enums_arena_defines"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["itmyxyf@gmail.com"]
description = "`enums_arena` is an arena that enums can be stored efficiently"
repository = "https://github.com/kadds/enums_arena"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
